# gan_templates

./: Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py
conf/: score_generator.yaml  train_nn.yaml
conf/data/: fruits_data_module.yaml  skins_data_module.yaml
conf/experiment/: gan.yaml  gan_fruits.yaml  wgan_1_skins.yaml  wgan_fruits.yaml  wgan_skins.yaml
conf/loggers/: aim.yaml  mlflow.yaml  tensorboard.yaml
conf/model/: gan.yaml  wgan.yaml  wgan_1.yaml
conf/paths/: default.yaml
conf/trainer/: gpu.yaml
src/: onnx_generator.py  score_generator.py  to_onnx.py  train_nn.py
src/data/: fruits_data_module.py  skins_data_module.py
src/models/: gan.py  wgan.py  wgan_1.py
tests/: test_main.py
tests_docker/: test_download.py
